0030240: Visualization, OpenGl_FrameStatsPrs - chart cannot be erased